# merkle-simple

./: .project  Cargo.toml  LICENSE.md  README.md
benches/: lib.rs
src/: lib.rs  main.rs  merkletree.rs  proof.rs  tests.rs  treeelement.rs  utils.rs
tests/: proof.rs  trait_impl.rs
