[package]
name = "merkle_simple"
version = "0.1.0"
authors = ["Sergey Kletsun <Sergey.Kletsun@gmail.com>"]
repository = "https://github.com/khnp/merkle-simple.git"
homepage = "https://github.com/khnp/merkle-simple.git"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/khnp/merkle-simple.git"
description = "Merkle Tree implementation in Rust."

[dependencies]
crypto-hash = "0.3.0"